# serials

./: .gitignore  AGENTS.md  Cargo.toml  HARDWARE.md  README.md  WIFI_CONFIG_IMPLEMENTATION.md  WIFI_CONFIG_TODO.md  attach-probe.sh  build.rs  cat_frames_data.rs  check-all.ps1  clock_frames_data.rs  hand_frames_data.rs  justfile  link-rp.x  memory-pico1w.x  memory-pico2-riscv.x  memory-pico2.x  probeusb.ps1  rust-toolchain.toml  useful.md  video_frames_data.rs
.cargo/: config.toml
.tmp/: rustix_test_can_compile
cyw43-firmware/: README.md
examples/: blinky.rs  clock_4led_wifi.rs  clock_console.rs  clock_lcd.rs  clock_led12x4.rs  clock_led24x4.rs  clock_led24x4_wifi.rs  clock_led4.rs  clock_led4_wifi.rs  clock_led8x12.rs  clock_servos.rs  clock_simple.rs  concat_h.rs  conway.rs  deleteme_clock_led24x4.rs  flash.rs  full.rs  info_world.rs  ir.rs  ir_kepler.rs  ir_pio_read.rs  ir_test_pin.rs  lcd_clock.rs  led12x4.rs  led24x4_clock.rs  led2d.rs  led2d_b.rs  led2d_custom_mapping.rs  led8x12.rs  led_24x4.rs  led_24x4_clock.rs  led_strip.rs  led_strip1.rs  led_strip2.rs  led_strip_3_on_a_pio.rs  led_strip_simple.rs  led_strip_simple_two.rs  led_strip_single.rs  led_strip_snake.rs  led_strip_two_one.rs  (+8 more)
examples/clock_led4/: state.rs  time.rs
examples/clock_led4_wifi/: clock_led4.rs
examples/clock_led4_wifi/clock_led4/: time.rs
examples/static/busy_beaver_blaze/v0.2.7/: index.html  styles.css  test.html  worker.js
examples/static/busy_beaver_blaze/v0.2.7/pkg/: README.md  busy_beaver_blaze.d.ts  busy_beaver_blaze.js  busy_beaver_blaze_bg.wasm  busy_beaver_blaze_bg.wasm.d.ts  package.json
scripts/: attach-probe.sh  gather.bat  gather.sh  make_hand_video.py  open-docs.sh  regenerate-text-pngs.sh  rustc-wrapper.sh
src/: adjustable_clock.rs  bit_matrix.rs  bit_matrix3x4.rs  bit_matrix_4led.rs  bit_matrix_led4.rs  blink_state.rs  blinkable_display.rs  blinker.rs  blinker_4led.rs  blinker_led4.rs  button.rs  char_lcd.rs  char_lcd_i2c.rs  clock.rs  clock_4led.rs  clock_4led_blinker.rs  clock_4led_constants.rs  clock_4led_display.rs  clock_4led_hardware.rs  clock_4led_state.rs  clock_4led_time.rs  clock_led4.rs  clock_offset_store.rs  clock_state.rs  clock_time.rs  constants.rs  credential_store.rs  dhcp_server.rs  display.rs  display_4led.rs  display_led4.rs  dns_server.rs  error.rs  flash.rs  flash_array.rs  flash_block.rs  flash_slice.rs  hardware.rs  ir.rs  ir_kepler.rs  (+42 more)
src/clock_4led/: state.rs
src/clock_led4/: state.rs  time.rs
src/cwf/: bit_matrix.rs  blink_state.rs  blinker.rs  clock.rs  clock_state.rs  clock_time.rs  display.rs  hardware.rs  leds.rs  mod.rs  output_array.rs  time_sync.rs
src/led4/: led4_simple.rs  output_array.rs
src/led_strip/: gamma.rs  led_strip_shared.rs  strip.rs
src/wifi_auto/: credentials.rs  dhcp.rs  fields.rs  portal.rs  stack.rs
src/wifi_setup/: fields.rs  portal.rs  stack.rs
tests/: clock_layout.json  led2d_mapping_algebra.rs  led2d_text_render.rs  mapping.rs  raspberry_clock.repl  run_clock.resc  run_fib.resc  test_validation.rs  ui.rs  ui_bad_pio_pin.rs  ui_bad_sm.rs
tests-compile-only/: led12x4.rs  led2d_custom_mapping.rs  led2d_multiple.rs  led_strip_all_pios.rs  led_strip_pio0.rs  led_strip_pio1.rs  led_strip_two_one.rs
tests/data/text_render/: README.md
tests/embedded/: Cargo.toml  memory.x
tests/embedded/.cargo/: config.toml
tests/embedded/src/: main.rs
xtask/: Cargo.toml  build.rs
xtask/.cargo/: config.toml
xtask/src/: main.rs  video_frames_gen.rs
